// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /v2/swaps/:id retrieves a swap from a native swap id 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "executedAt": null,
      "fees": [],
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "isDcaSwap": null,
    "lastExecutedChunk": null,
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "0",
    "totalChunksExecuted": 0,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin 1`] = `
{
  "boost": {},
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
    "transactionRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
  },
  "depositChannel": {},
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "executedAt": null,
      "fees": [],
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "lastExecutedChunk": null,
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "0",
    "totalChunksExecuted": 0,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in COMPLETE status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "COMPLETE",
  "swap": {
    "currentChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "isDcaSwap": null,
    "lastExecutedChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "outputAmount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "sentAt": 624000,
    "sentAtBlockIndex": "104-7",
    "sentTxRef": "104-2",
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "4192904666034",
    "totalChunksExecuted": 1,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENDING status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENDING",
  "swap": {
    "currentChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "isDcaSwap": null,
    "lastExecutedChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "outputAmount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "4192904666034",
    "totalChunksExecuted": 1,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENT status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENT",
  "swap": {
    "currentChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "isDcaSwap": null,
    "lastExecutedChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "outputAmount": "4192707216034",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-595",
    "sentTxRef": "0xdeadbeef",
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "4192904666034",
    "totalChunksExecuted": 1,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {},
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "estimatedDurationSeconds": 48,
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDcaSwap": null,
    "lastExecutedChunk": {
      "executedAt": "1970-01-01T00:09:24.000Z",
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "4192904666034",
    "totalChunksExecuted": 1,
    "type": "SWAP",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with a refund in SENDING status 1`] = `
{
  "boost": {
    "maxBoostFeeBps": 0,
  },
  "ccm": {},
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "expiryBlock": "265",
    "isExpired": false,
    "openedThroughBackend": false,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "refund": {
    "outputAmount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENDING",
  "swap": {
    "currentChunk": {
      "executedAt": null,
      "fees": [],
      "latestSwapRescheduledAt": null,
      "retryCount": 0,
      "scheduledAt": "1970-01-01T00:09:12.000Z",
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "estimatedDurationSeconds": 48,
    "fees": Any<Array>,
    "isDcaSwap": null,
    "lastExecutedChunk": null,
    "srcChainRequiredBlockConfirmations": 2,
    "totalAmountSwapped": "0",
    "totalChunksExecuted": 0,
    "type": "SWAP",
  },
}
`;
